# GridGenerator

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
UnitTest/: .clang-format  CMakeLists.txt  test_hilbert.cpp  test_math.cpp
docs/: Doxyfile.in
include/: sfcmm_common.h
include/common/: boundingbox.h  constants.h  globalmpi.h  log.h  macros.h  random_special.h  sfcmm_types.h  timer.h
include/common/geometry/: circle.h
include/common/math/: cartesian.h  hilbert.h  mathfunctions.h
include/common/util/: backtrace.h  base64.h  binary.h  string_helper.h  sys.h
lib/: cxxopts.hpp  date.h  json.h
lib/Eigen/: CholmodSupport  Core  LU  OrderingMethods  StdDeque
lib/Eigen/src/Core/: ArithmeticSequence.h  AssignEvaluator.h  BandMatrix.h  CwiseUnaryOp.h  Dot.h  GenericPacketMath.h  GlobalFunctions.h  Map.h  MathFunctions.h  MathFunctionsImpl.h  Matrix.h  ProductEvaluators.h  Redux.h  SelfAdjointView.h  SolveTriangular.h  SolverBase.h  Stride.h
lib/Eigen/src/Core/arch/AVX/: Complex.h  MathFunctions.h  PacketMath.h
lib/Eigen/src/Core/arch/AVX512/: MathFunctions.h  PacketMath.h
lib/Eigen/src/Core/arch/AltiVec/: Complex.h  MatrixProduct.h  MatrixProductCommon.h  MatrixProductMMA.h  PacketMath.h
lib/Eigen/src/Core/arch/MSA/: Complex.h  PacketMath.h
lib/Eigen/src/Core/arch/NEON/: Complex.h  PacketMath.h
lib/Eigen/src/Core/arch/SSE/: Complex.h  PacketMath.h  TypeCasting.h
lib/Eigen/src/Core/arch/ZVector/: Complex.h  PacketMath.h
lib/Eigen/src/Core/functors/: BinaryFunctors.h  StlFunctors.h  UnaryFunctors.h
lib/Eigen/src/Core/products/: GeneralBlockPanelKernel.h
lib/Eigen/src/Core/util/: BlasUtil.h  Constants.h  ForwardDeclarations.h  Macros.h  Meta.h  XprHelper.h
lib/Eigen/src/Eigenvalues/: HessenbergDecomposition.h  RealSchur.h
lib/Eigen/src/Geometry/: Homogeneous.h  OrthoMethods.h  ParametrizedLine.h  Rotation2D.h  Transform.h
lib/Eigen/src/Householder/: Householder.h
lib/Eigen/src/OrderingMethods/: Ordering.h
lib/Eigen/src/PaStiXSupport/: PaStiXSupport.h
lib/Eigen/src/QR/: ColPivHouseholderQR.h
lib/Eigen/src/SVD/: BDCSVD.h  SVDBase.h  UpperBidiagonalization.h
lib/Eigen/src/SparseCholesky/: SimplicialCholesky.h
lib/Eigen/src/SparseCore/: SparseDenseProduct.h
lib/Eigen/src/UmfPackSupport/: UmfPackSupport.h
lib/Eigen/src/plugins/: ArrayCwiseUnaryOps.h
perf/: perf.cpp
src/: .clang-format  .clang-tidy  IO.h  WeightMethod.h  backtrace.h  base_cartesiangrid.h  cartesian.h  cartesiangrid.h  cartesiangrid_base.h  cartesiangrid_generation.h  compiler_config.h  config.h.in  configuration.h  constants.h  functions.h  geometry.h  global.cpp  global.h  globalmpi.cpp  globalmpi.h  globaltimers.h  gmath.h  gridGenerator.cpp  gridGenerator.h  gridInterface.h  gridcell.h  gridcell_properties.h  gtree.h  kdtree.h  loadbalancing_weights.h  log.cpp  log.h  macros.h  main.cpp  sys.h  term.h  timer.cpp  timer.h  triangle.h  types.h
src/common/: IO.h  compiler_config.h  globalmpi.h  line.h  surface.h  types.h
src/interface/: grid_interface.h
src/math/: cartesian.h  gmath.h  hilbert.h  mathfunctions.h
src/util/: backtrace.h  string_helper.h  sys.h
test/: run.sh
test/box/: box1.json  box1_aligned.json  box3.json  box3_aligned.json
test/config/: grid.json  grid_stl.json
test/stl/: cube.json  cube.stl  donut.json  donut.stl  donut_highres.json  donut_highres.stl  donut_lowres.json  donut_lowres.stl  donut_lowres_outputlvl2.json  donut_lowres_outputlvl3.json  donut_lowres_outputlvl4.json  f22.json  sphere.json  sphere.stl  sphere_highres.json  sphere_highres.stl  sphere_highres_binary.stl  sphere_lowres.json  sphere_lowres.stl  sphere_ultrares.json  sphere_ultrares_large.json
test/vtk/: cube1x1x1.vts  cube1x1x1.vtu  cube2x2x2.vtr  cube2x2x2.vts  exp.htg
